<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solutionTV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/_0"
        android:textColor="#000000"
        android:gravity="end|center"
        android:textSize="32sp"
        android:layout_gravity="bottom|center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1.5">

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textAlignment="textEnd"
            android:textSize="58sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:orientation="vertical"
        android:gravity="center|bottom"
        android:background="#D5FFD4"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/c"
                android:backgroundTint="#FF5722"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/openbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/openbrack"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                android:backgroundTint="#673AB7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/closebutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/closebrack"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                android:backgroundTint="#673AB7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dividebutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/slash"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="#FF9800"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sevenbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_7"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eightbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_8"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ninebutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_9"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/star"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="#FF9800"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fourbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_4"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fivebutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_5"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sixbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_6"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plusbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/plus"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="#FF9800"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/onebutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_1"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/twobutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_2"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/threebutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_3"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minusbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/minus"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="#FF9800"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/acbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/ac"
                android:textSize="21sp"
                app:cornerRadius="35dp"
                android:backgroundTint="#ff5722"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zerobutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_0"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dotbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/dot"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equalsbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/equals"
                android:textSize="30sp"
                app:cornerRadius="35dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:backgroundTint="#FF9800"
                />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>